NEGs accumulate energy per second. Config.json is now structured.

--- a/code/assets/data/config.json
+++ b/code/assets/data/config.json
@@ -2,7 +2,11 @@
     "startingResources": [500, 100],
     
     // all costs are an array of [alloy, neodymium]
-    "buildingCosts": {        
-        "neodymiumElectricGenerator": [500, 100]
+    "buildings": {        
+        "neodymiumElectricGenerator": {
+            "alloyCost": 500,
+            "neodymiumCost": 100,
+            "energyGeneratedPerSecond": 10
+        }
     }
 }
